--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
     <div class="body">
       <!--header-->
       <header class="header">
-        <div class="logo">
-        <a href="index.html"><span class="logo1">Web</span> Studio</a>
+        <div class="header-logo">
+        <a href="index.html" class="header-studio"><span class="header-web">Web</span> Studio</a>
         </div>
+
           <div class="navigation">
         <nav>
           <ul>
             <li class="nav1"><a href="#">Студія</a></li>
-            <li class="nav2"><a href="#">Портфоліо</a></li>
+            <li class="nav2"><a href="portfolio.html">Портфоліо</a></li>
             <li class="nav3"><a href="#">Контакти</a></li>
           </ul>
         </nav>
           </div>
+
         <div class="contacts">
           <ul>
             <li class="mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -107,48 +109,50 @@
         <section class="team">
           <h2>Наша команда</h2>
           <ul>
-            <li class="team1">
+            <figure>
+
+            <li>
               <img src="./images/img1.jpg" 
               alt="Product Designer" 
               width="270" height="260"/>
-              <!--<figure> (підпис під фото)
-                    <figcaption> (контент)
-                    <figure>
-                      <img
-                src="./images/img2.jpg"
-                alt="Frontend Developer"
-                width="270" height="260"/>
-              <figcaption>
-                <h3>Ольга Рєпіна</h3>
-              <p lang="EN">Frontend Developer</p>
-              </figcaption>
-                    </figure>-->
-              
+              <figcaption>              
               <h3>Ігор Дем'яненко</h3>
               <p lang="EN">Product Designer</p>
+            </figcaption>
             </li>
-            <li class="team2">
+
+            <li>
               <img
                 src="./images/img2.jpg"
                 alt="Frontend Developer"
                 width="270" height="260"/>
+                <figcaption>
               <h3>Ольга Рєпіна</h3>
               <p lang="EN">Frontend Developer</p>
+            </figcaption>
             </li>
-            <li class="team3">
+
+            <li>
               <img src="./images/img3.jpg" 
               alt="Marketing"
               width="270" height="260"/>
+              <figcaption>
               <h3>Микола Тарасов</h3>
               <p lang="EN">Marketing</p>
+            </figcaption>
             </li>
-            <li class="team4">
+
+            <li>
               <img src="./images/img4.jpg" 
               alt="Designer" 
               width="270" height="260"/>
+              <figcaption>
               <h3>Михайло Єрмаков</h3>
               <p lang="EN">UI Designer</p>
+            </figcaption>
             </li>
+
+          </figure>
           </ul>
         </section>
       </main>
