work-portfolio-and-css-01

--- a/index.html
+++ b/index.html
@@ -18,21 +18,24 @@
         <a href="index.html" class="header-studio"><span class="header-web">Web</span> Studio</a>
         </div>
 
-          <div class="navigation">
+          <div class="header-navigation">
         <nav>
           <ul>
-            <li class="nav1"><a href="#">Студія</a></li>
-            <li class="nav2"><a href="portfolio.html">Портфоліо</a></li>
-            <li class="nav3"><a href="#">Контакти</a></li>
+            <li><a href="#">Студія</a></li>
+            <li><a href="portfolio.html">Портфоліо</a></li>
+            <li><a href="#">Контакти</a></li>
           </ul>
         </nav>
           </div>
 
-        <div class="contacts">
+        <div class="header-mail">
           <ul>
-            <li class="mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="tel">
+          </div>
+
+          <div  class="header-tel">
+            <li>
               <a href="tel:+380961111111" class="contact-link"
                 >+380 96 111 11 11</a
               >
@@ -44,18 +47,19 @@
       <!--main file-->
       <main class="main">
         <!--heroy-->
-        <section class="heroy">
-          <div class="heroy1">
+        <section class="main-heroy">
+          <div>
           <h1>
             Ефективні рішення для <br />
             вашого бізнесу
           </h1>
           </div>
 
-          <button type="button" class="button">Замовити послугу</button>
+          <button type="button" class="main-button">Замовити послугу</button>
         </section>
+
         <!--skill file-->
-        <section class="skill">
+        <div class="skill">
           <h2 leng="EN">Skills</h2>
           <ul>
             <li>
@@ -86,10 +90,10 @@
               </p>
             </li>
           </ul>
-          </section>
+          </div>
 
           <!--work file-->
-            <section class="hoby">
+            <section class="work">
               <h2>Чим ми займаємося</h2>
             <ul>
               <li>
@@ -105,6 +109,7 @@
               </li>
             </ul>
             </section>
+
         <!--team file-->
         <section class="team">
           <h2>Наша команда</h2>
@@ -164,7 +169,7 @@
           <a href="https://goo.gl/maps/q75ALVjxt7GABxod9" target="_blank" 
           rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
 
-        <div class="contacts footer">
+        <div>
           <ul>
             <li>
               <a href="mailto:info@devstudio.com">info@devstudio.com</a>
