--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="body">
     <h1>Portfolio</h1>
         <!--header-->
         <header class="header">
@@ -34,6 +35,7 @@
             </div>
         </header>
     <div>
+<main>
 <Ul>
     <li><a href="#">Усі</a></li>
     <li><a href="#">Веб-сайти</a></li>
@@ -103,6 +105,7 @@
         </figure>
         </ul>
     </section>
+</main>
     <footer class="footer">
         <a href="index.html" class="logo"
         ><span class="logo1">Web</span> Studio</a>
