--- a/index.html
+++ b/index.html
@@ -11,34 +11,31 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="body">
+    <section class="body">
       <!--header-->
       <header class="header">
         <div class="header-logo">
-        <a href="index.html" class="header-studio"><span class="header-web">Web</span> Studio</a>
+        <a href="index.html" class="header-studio"><span class="header-web">Web</span>Studio</a>
         </div>
 
           <div class="header-navigation">
         <nav>
-          <ul>
-            <li><a href="#">Студія</a></li>
-            <li><a href="portfolio.html">Портфоліо</a></li>
-            <li><a href="#">Контакти</a></li>
+          <ul class="header-list">
+            <li><a class="link" href="#">Студія</a></li>
+            <li><a class="link" href="portfolio.html">Портфоліо</a></li>
+            <li><a class="link" href="#">Контакти</a></li>
           </ul>
         </nav>
           </div>
 
-        <div class="header-mail">
-          <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-          </div>
-
-          <div  class="header-tel">
+        <div class="header-contacts">
+          <ul class="header-list">
             <li>
-              <a href="tel:+380961111111" class="contact-link"
-                >+380 96 111 11 11</a
-              >
+              <a class="contact-tel" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+          
+            <li>
+              <a class="contact-tel" href="tel:+380961111111">+380 96 111 11 11</a>
             </li>
           </ul>
         </div>
@@ -61,7 +58,7 @@
         <!--skill file-->
         <div class="skill">
           <h2 leng="EN">Skills</h2>
-          <ul>
+          <ul class="skill-list">
             <li>
               <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
               <p>
@@ -93,9 +90,9 @@
           </div>
 
           <!--work file-->
-            <section class="work">
-              <h2>Чим ми займаємося</h2>
-            <ul>
+            <div class="work">
+              <h2 class="work-title">Чим ми займаємося</h2>
+            <ul class="work-image">
               <li>
                 <img src="./images/box1.jpg" alt="developering" 
                 width="370" height="294"/>
@@ -108,14 +105,17 @@
                 width="370" height="294"/>
               </li>
             </ul>
-            </section>
+            </div>
 
         <!--team file-->
-        <section class="team">
+      <section class="team">
+          <div class="team-title">
           <h2>Наша команда</h2>
-          <ul>
+        </div>
+        <div class="team-cards">
+          <ul class="team-list">
             <figure>
-
+              <div class="team-image">
             <li>
               <img src="./images/img1.jpg" 
               alt="Product Designer" 
@@ -125,7 +125,8 @@
               <p lang="EN">Product Designer</p>
             </figcaption>
             </li>
-
+              </div>
+              <div class="team-image">
             <li>
               <img
                 src="./images/img2.jpg"
@@ -136,7 +137,8 @@
               <p lang="EN">Frontend Developer</p>
             </figcaption>
             </li>
-
+              </div>
+              <div class="team-image">
             <li>
               <img src="./images/img3.jpg" 
               alt="Marketing"
@@ -146,7 +148,8 @@
               <p lang="EN">Marketing</p>
             </figcaption>
             </li>
-
+              </div>
+              <div class="team-image">
             <li>
               <img src="./images/img4.jpg" 
               alt="Designer" 
@@ -156,30 +159,34 @@
               <p lang="EN">UI Designer</p>
             </figcaption>
             </li>
-
+              </div>
           </figure>
           </ul>
+        </div>
         </section>
       </main>
 
       <!--file contacts-->
-      <footer class="footer">
-        <a href="index.html" class="logo"
-          ><span class="logo1">Web</span> Studio</a>
-          <a href="https://goo.gl/maps/q75ALVjxt7GABxod9" target="_blank" 
+      <footer>
+      <div class="footer">
+        <div class="footer-logo">
+          <a href="index.html" class="footer-studio"><span class="footer-web">Web</span>Studio</a>
+        </div>
+          <a class="footer-addres" href="https://goo.gl/maps/q75ALVjxt7GABxod9" target="_blank" 
           rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
 
         <div>
-          <ul>
+          <ul class="footer-list">
             <li>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-              <a href="tel:+380961111111" class="contact-link">+380 96 111 11 11</a>
+              <a class="footer-mail" href="tel:+380961111111">+380 96 111 11 11</a>
             </li>
           </ul>
         </div>
+      </div>
       </footer>
-    </div>
+    </section>
   </body>
 </html>
