add-css-hw-02--30.10.22

--- a/index.html
+++ b/index.html
@@ -5,51 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>home work</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <section class="body">
       <!--header-->
       <header class="header">
         <div class="header-logo">
-        <a href="index.html" class="header-studio"><span class="header-web">Web</span>Studio</a>
+          <a href="index.html" class="header-studio"
+            ><span class="header-web">Web</span>Studio</a
+          >
         </div>
 
-          <div class="header-navigation">
-        <nav>
-          <ul class="header-list">
-            <li><a class="link" href="#">Студія</a></li>
-            <li><a class="link" href="portfolio.html">Портфоліо</a></li>
-            <li><a class="link" href="#">Контакти</a></li>
-          </ul>
-        </nav>
-          </div>
+        <div class="header-navigation">
+          <nav>
+            <ul class="header-list">
+              <li><a class="link" href="#">Студія</a></li>
+              <li><a class="link" href="portfolio.html">Портфоліо</a></li>
+              <li><a class="link" href="#">Контакти</a></li>
+            </ul>
+          </nav>
+        </div>
 
         <div class="header-contacts">
           <ul class="header-list">
             <li>
-              <a class="contact-tel" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="contact-tel" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
             </li>
-          
+
             <li>
-              <a class="contact-tel" href="tel:+380961111111">+380 96 111 11 11</a>
+              <a class="contact-tel" href="tel:+380961111111"
+                >+380 96 111 11 11</a
+              >
             </li>
           </ul>
         </div>
       </header>
 
       <!--main file-->
-      <main class="main">
+      <section class="main">
         <!--heroy-->
         <section class="main-heroy">
           <div>
-          <h1>
-            Ефективні рішення для <br />
-            вашого бізнесу
-          </h1>
+            <h1>
+              Ефективні рішення для <br />
+              вашого бізнесу
+            </h1>
           </div>
 
           <button type="button" class="main-button">Замовити послугу</button>
@@ -57,7 +66,7 @@
 
         <!--skill file-->
         <div class="skill">
-          <h2 leng="EN">Skills</h2>
+          <h2>Skills</h2>
           <ul class="skill-list">
             <li>
               <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -87,105 +96,138 @@
               </p>
             </li>
           </ul>
-          </div>
-
-          <!--work file-->
-            <div class="work">
-              <h2 class="work-title">Чим ми займаємося</h2>
-            <ul class="work-image">
-              <li>
-                <img src="./images/box1.jpg" alt="developering" 
-                width="370" height="294"/>
-              </li>
-              <li>
-                <img src="./images/box2.jpg" alt="semantics" 
-                width="370" height="294"/>
-              </li>
-              <li><img src="./images/box3.jpg" alt="design" 
-                width="370" height="294"/>
-              </li>
-            </ul>
-            </div>
-
-        <!--team file-->
-      <section class="team">
-          <div class="team-title">
-          <h2>Наша команда</h2>
         </div>
-        <div class="team-cards">
-          <ul class="team-list">
-            <figure>
-              <div class="team-image">
-            <li>
-              <img src="./images/img1.jpg" 
-              alt="Product Designer" 
-              width="270" height="260"/>
-              <figcaption>              
-              <h3>Ігор Дем'яненко</h3>
-              <p lang="EN">Product Designer</p>
-            </figcaption>
-            </li>
-              </div>
-              <div class="team-image">
+
+        <!--work file-->
+        <div class="work">
+          <h2 class="work-title">Чим ми займаємося</h2>
+          <ul class="work-image">
             <li>
               <img
-                src="./images/img2.jpg"
-                alt="Frontend Developer"
-                width="270" height="260"/>
-                <figcaption>
-              <h3>Ольга Рєпіна</h3>
-              <p lang="EN">Frontend Developer</p>
-            </figcaption>
+                src="./images/box1.jpg"
+                alt="developering"
+                width="370"
+                height="294"
+              />
             </li>
-              </div>
-              <div class="team-image">
             <li>
-              <img src="./images/img3.jpg" 
-              alt="Marketing"
-              width="270" height="260"/>
-              <figcaption>
-              <h3>Микола Тарасов</h3>
-              <p lang="EN">Marketing</p>
-            </figcaption>
+              <img
+                src="./images/box2.jpg"
+                alt="semantics"
+                width="370"
+                height="294"
+              />
             </li>
-              </div>
-              <div class="team-image">
             <li>
-              <img src="./images/img4.jpg" 
-              alt="Designer" 
-              width="270" height="260"/>
-              <figcaption>
-              <h3>Михайло Єрмаков</h3>
-              <p lang="EN">UI Designer</p>
-            </figcaption>
+              <img
+                src="./images/box3.jpg"
+                alt="design"
+                width="370"
+                height="294"
+              />
             </li>
-              </div>
-          </figure>
           </ul>
         </div>
+
+        <!--team file-->
+        <section class="team">
+          <div class="team-title">
+            <h2>Наша команда</h2>
+          </div>
+          <div class="team-cards">
+            <ul class="team-list">
+                <li>
+                  <figure>
+                    <img
+                      src="./images/img1.jpg"
+                      alt="Product Designer"
+                      width="270"
+                      height="260"/>
+                    <figcaption>
+                      <h3>Ігор Дем'яненко</h3>
+                      <p lang="EN">Product Designer</p>
+                    </figcaption>
+                  </figure>
+                </li>
+                <li>
+                  <figure>
+                    <img
+                      src="./images/img2.jpg"
+                      alt="Frontend Developer"
+                      width="270"
+                      height="260"
+                    />
+                    <figcaption>
+                      <h3>Ольга Рєпіна</h3>
+                      <p lang="EN">Frontend Developer</p>
+                    </figcaption>
+                  </figure>
+                </li>
+                <li>
+                  <figure>
+                    <img
+                      src="./images/img3.jpg"
+                      alt="Marketing"
+                      width="270"
+                      height="260"/>
+                    <figcaption>
+                      <h3>Микола Тарасов</h3>
+                      <p lang="EN">Marketing</p>
+                    </figcaption>
+                  </figure>
+                </li>
+                <li>
+                  <figure>
+                    <img
+                      src="./images/img4.jpg"
+                      alt="Designer"
+                      width="270"
+                      height="260"
+                    />
+                    <figcaption>
+                      <h3>Михайло Єрмаков</h3>
+                      <p lang="EN">UI Designer</p>
+                    </figcaption>
+                  </figure>
+                </li>
+            </ul>
+          </div>
         </section>
-      </main>
+      </section>
 
       <!--file contacts-->
       <footer>
-      <div class="footer">
-        <div class="footer-logo">
-          <a href="index.html" class="footer-studio"><span class="footer-web">Web</span>Studio</a>
-        </div>
-          <a class="footer-addres" href="https://goo.gl/maps/q75ALVjxt7GABxod9" target="_blank" 
-          rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
+        <div class="footer">
+          <div class="footer-logo">
+            <a href="index.html" class="footer-studio"
+              ><span class="footer-web">Web</span>Studio</a
+            >
+          </div>
+          <address class="addres">
+            <a
+              class="footer-addres"
+              href="https://goo.gl/maps/q75ALVjxt7GABxod9"
+              target="_blank"
+              rel="noopener noreferrer"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </address>
 
-        <div>
-          <ul class="footer-list">
-            <li>
-              <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-              <a class="footer-mail" href="tel:+380961111111">+380 96 111 11 11</a>
-            </li>
-          </ul>
+          <div>
+            <ul class="footer-list">
+              <li>
+                <a class="footer-mail" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="footer-mail" href="tel:+380961111111"
+                  >+380 96 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
       </footer>
     </section>
   </body>
