index-portfolio-css-02--31.10.22

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         </div>
       </header>
 
-      <!--main file-->
-      <section class="main">
+      <!------main file------>
+      <main class="main">
         <!--heroy-->
         <section class="main-heroy">
           <div>
@@ -65,7 +65,7 @@
         </section>
 
         <!--skill file-->
-        <div class="skill">
+        <section class="skill">
           <h2>Skills</h2>
           <ul class="skill-list">
             <li>
@@ -96,10 +96,10 @@
               </p>
             </li>
           </ul>
-        </div>
+        </section>
 
         <!--work file-->
-        <div class="work">
+        <section class="work">
           <h2 class="work-title">Чим ми займаємося</h2>
           <ul class="work-image">
             <li>
@@ -127,7 +127,7 @@
               />
             </li>
           </ul>
-        </div>
+        </section>
 
         <!--team file-->
         <section class="team">
@@ -193,7 +193,7 @@
             </ul>
           </div>
         </section>
-      </section>
+      </main>
 
       <!--file contacts-->
       <footer>
