--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="body">
-    <h1>Portfolio</h1>
     <!----------HEADER----------->
     <header class="header">
       <div class="header-logo">
@@ -46,16 +45,18 @@
 
     <!----------MAIN----------->
     <section class="portfolio-main">
-      <ul>
-        <li><button type="button">Усі</button></li>
-        <li><button type="button">Веб-сайти</button></li>
-        <li><button type="button">Додатки</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
+
+        <h1 class="portfolio-title">Портфоліо</h1>
+
+      <ul class="button-filter">
+        <li><button class="portfolio-button" type="button">Усі</button></li>
+        <li><button class="portfolio-button" type="button">Веб-сайти</button></li>
+        <li><button class="portfolio-button" type="button">Додатки</button></li>
+        <li><button class="portfolio-button" type="button">Дизайн</button></li>
+        <li><button class="portfolio-button" type="button">Маркетинг</button></li>
       </ul>
 
-      <section>
-        <ul>
+        <ul class="portfolio-image">
           <li>
             <figure>
               <img
@@ -146,7 +147,6 @@
             </figure>
           </li>
         </ul>
-      </section>
     </section>
     <!----------MAIN----------->
 
