index-portfolio-css-02--31/10/22

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </header>
 
       <!------main file------>
-      <main class="main">
+      <main class="single-file">
         <!--heroy-->
         <section class="main-heroy">
           <div>
