index-portfolio-css-03--31/10/22

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,14 +7,13 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body class="body">
+  <body>
     <!----------HEADER----------->
     <header class="header">
-      <div class="header-logo">
-        <a href="index.html" class="header-studio"
-          ><span class="header-web">Web</span>Studio</a
-        >
-      </div>
+        <div class="header-logo">
+            <a href="index.html" class="header-studio"
+              ><span class="header-web">Web</span> Studio</a>
+        </div>
 
       <div class="header-navigation">
         <nav>
@@ -44,6 +43,7 @@
     <!----------HEADER----------->
 
     <!----------MAIN----------->
+    <main>
     <section class="portfolio-main">
 
         <h1 class="portfolio-title">Портфоліо</h1>
@@ -58,96 +58,61 @@
 
         <ul class="portfolio-image">
           <li>
-            <figure>
               <img
                 src="./images/port1.jpg"
                 alt="Технокряк"
                 width="370"
-                height="294"
-              />
-              <figcaption>
+                height="294"/>
                 <h2>Технокряк</h2>
                 <p>Веб-сайт</p>
-              </figcaption>
-            </figure>
           </li>
           <li>
-            <figure>
               <img
                 src="./images/port2.jpg"
-                alt="Постер New Orlean vs Golden Star"
-              />
-              <figcaption>
+                alt="Постер New Orlean vs Golden Star"/>
                 <h2>Постер New Orlean vs Golden Star</h2>
                 <p>Дизайн</p>
-              </figcaption>
-            </figure>
           </li>
           <li>
-            <figure>
               <img src="./images/port3.jpg" alt="Ресторан Seafood" />
               <figcaption>
                 <h2>Ресторан Seafood</h2>
                 <p>Додаток</p>
-              </figcaption>
-            </figure>
           </li>
           <li>
-            <figure>
               <img src="./images/port4.jpg" alt="Проєкт Prime" />
-              <figcaption>
                 <h2>Проєкт Prime</h2>
                 <p>Маркетинг</p>
-              </figcaption>
-            </figure>
           </li>
           <li>
-            <figure>
               <img src="./images/port5.jpg" alt="Проєкт Boxes" />
-              <figcaption>
                 <h2>Проєкт Boxes</h2>
                 <p>Додаток</p>
-              </figcaption>
-            </figure>
           </li>
           <li>
-            <figure>
               <img src="./images/port6.jpg" alt="Inspiration has no Borders" />
-              <figcaption>
                 <h2>Inspiration has no Borders</h2>
                 <p>Веб-сайт</p>
-              </figcaption>
-            </figure>
           </li>
           <li>
-            <figure>
               <img src="./images/port7.jpg" alt="Видання Limited Edition" />
-              <figcaption>
                 <h2>Видання Limited Edition</h2>
                 <p>Дизайн</p>
-              </figcaption>
-            </figure>
           </li>
           <li>
-            <figure>
               <img src="./images/port8.jpg" alt="Проєкт LAB" />
               <figcaption>
                 <h2>Проєкт LAB</h2>
                 <p>Маркетинг</p>
-              </figcaption>
-            </figure>
           </li>
           <li>
-            <figure>
               <img src="./images/port9.jpg" alt="Growing Business" />
-              <figcaption>
                 <h2>Growing Business</h2>
                 <p>Додаток</p>
-              </figcaption>
-            </figure>
           </li>
         </ul>
     </section>
+</main>
     <!----------MAIN----------->
 
     <!----------FOOTER----------->
