--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <header class="header">
         <div class="header-logo">
           <a href="index.html" class="header-studio"
-            ><span class="header-web">Web</span>Studio</a
+            ><span class="header-web">Web</span> Studio</a
           >
         </div>
 
@@ -61,7 +61,7 @@
             </h1>
           </div>
 
-          <button type="button" class="main-button">Замовити послугу</button>
+          <button class="main-button" type="button">Замовити послугу</button>
         </section>
 
         <!--skill file-->
@@ -69,27 +69,27 @@
           <h2>Skills</h2>
           <ul class="skill-list">
             <li>
-              <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+              <h3 class="skill-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p>
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
             <li>
-              <h3>ПУНКТУАЛЬНІСТЬ</h3>
+              <h3 class="skill-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p>
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
             <li>
-              <h3>ПЛАНУВАННЯ</h3>
+              <h3 class="skill-title">ПЛАНУВАННЯ</h3>
               <p>
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li>
-              <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <h3 class="skill-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p>
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
@@ -100,95 +100,74 @@
 
         <!--work file-->
         <section class="work">
-          <h2 class="work-title">Чим ми займаємося</h2>
+          <h2 class="title">Чим ми займаємося</h2>
           <ul class="work-image">
             <li>
               <img
                 src="./images/box1.jpg"
                 alt="developering"
                 width="370"
-                height="294"
-              />
+                height="294"/>
             </li>
             <li>
               <img
                 src="./images/box2.jpg"
                 alt="semantics"
                 width="370"
-                height="294"
-              />
+                height="294"/>
             </li>
             <li>
               <img
                 src="./images/box3.jpg"
                 alt="design"
                 width="370"
-                height="294"
-              />
+                height="294"/>
             </li>
           </ul>
         </section>
 
         <!--team file-->
         <section class="team">
-          <div class="team-title">
-            <h2>Наша команда</h2>
+          <div>
+            <h2  class="title">Наша команда</h2>
           </div>
           <div class="team-cards">
             <ul class="team-list">
                 <li>
-                  <figure>
                     <img
                       src="./images/img1.jpg"
                       alt="Product Designer"
                       width="270"
                       height="260"/>
-                    <figcaption>
-                      <h3>Ігор Дем'яненко</h3>
-                      <p lang="EN">Product Designer</p>
-                    </figcaption>
-                  </figure>
+                      <h3 class="team-title">Ігор Дем'яненко</h3>
+                      <p class="team-text" lang="EN">Product Designer</p>
                 </li>
                 <li>
-                  <figure>
                     <img
                       src="./images/img2.jpg"
                       alt="Frontend Developer"
                       width="270"
-                      height="260"
-                    />
-                    <figcaption>
-                      <h3>Ольга Рєпіна</h3>
-                      <p lang="EN">Frontend Developer</p>
-                    </figcaption>
-                  </figure>
+                      height="260"/>
+                      <h3 class="team-title">Ольга Рєпіна</h3>
+                      <p class="team-text" lang="EN">Frontend Developer</p>
                 </li>
                 <li>
-                  <figure>
                     <img
                       src="./images/img3.jpg"
                       alt="Marketing"
                       width="270"
                       height="260"/>
-                    <figcaption>
-                      <h3>Микола Тарасов</h3>
-                      <p lang="EN">Marketing</p>
-                    </figcaption>
-                  </figure>
+                      <h3 class="team-title">Микола Тарасов</h3>
+                      <p class="team-text" lang="EN">Marketing</p>
                 </li>
                 <li>
-                  <figure>
                     <img
                       src="./images/img4.jpg"
                       alt="Designer"
                       width="270"
-                      height="260"
-                    />
-                    <figcaption>
-                      <h3>Михайло Єрмаков</h3>
-                      <p lang="EN">UI Designer</p>
-                    </figcaption>
-                  </figure>
+                      height="260"/>
+                      <h3 class="team-title">Михайло Єрмаков</h3>
+                      <p class="team-text" lang="EN">UI Designer</p>
                 </li>
             </ul>
           </div>
