index-portfolio-css--04-01/11/22

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
       <div class="header-navigation">
         <nav>
           <ul class="header-list">
-            <li><a class="link" href="#">Студія</a></li>
+            <li><a class="link" href="index.html">Студія</a></li>
             <li><a class="link" href="portfolio.html">Портфоліо</a></li>
             <li><a class="link" href="#">Контакти</a></li>
           </ul>
@@ -46,7 +46,7 @@
     <main>
     <section class="portfolio-main">
 
-        <h1 class="portfolio-title">Портфоліо</h1>
+        <h1 class="portfolio-main-title">Портфоліо</h1>
 
       <ul class="button-filter">
         <li><button class="portfolio-button" type="button">Усі</button></li>
@@ -63,52 +63,52 @@
                 alt="Технокряк"
                 width="370"
                 height="294"/>
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
+                <h2 class="portfolio-title">Технокряк</h2>
+                <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
               <img
                 src="./images/port2.jpg"
                 alt="Постер New Orlean vs Golden Star"/>
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+                <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                <p class="portfolio-text">Дизайн</p>
           </li>
           <li>
               <img src="./images/port3.jpg" alt="Ресторан Seafood" />
               <figcaption>
-                <h2>Ресторан Seafood</h2>
-                <p>Додаток</p>
+                <h2 class="portfolio-title">Ресторан Seafood</h2>
+                <p class="portfolio-text">Додаток</p>
           </li>
           <li>
               <img src="./images/port4.jpg" alt="Проєкт Prime" />
-                <h2>Проєкт Prime</h2>
-                <p>Маркетинг</p>
+                <h2 class="portfolio-title">Проєкт Prime</h2>
+                <p class="portfolio-text">Маркетинг</p>
           </li>
           <li>
               <img src="./images/port5.jpg" alt="Проєкт Boxes" />
-                <h2>Проєкт Boxes</h2>
-                <p>Додаток</p>
+                <h2 class="portfolio-title">Проєкт Boxes</h2>
+                <p class="portfolio-text">Додаток</p>
           </li>
           <li>
               <img src="./images/port6.jpg" alt="Inspiration has no Borders" />
-                <h2>Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+                <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
               <img src="./images/port7.jpg" alt="Видання Limited Edition" />
-                <h2>Видання Limited Edition</h2>
-                <p>Дизайн</p>
+                <h2 class="portfolio-title">Видання Limited Edition</h2>
+                <p class="portfolio-text">Дизайн</p>
           </li>
           <li>
               <img src="./images/port8.jpg" alt="Проєкт LAB" />
               <figcaption>
-                <h2>Проєкт LAB</h2>
-                <p>Маркетинг</p>
+                <h2 class="portfolio-title">Проєкт LAB</h2>
+                <p class="portfolio-text">Маркетинг</p>
           </li>
           <li>
               <img src="./images/port9.jpg" alt="Growing Business" />
-                <h2>Growing Business</h2>
-                <p>Додаток</p>
+                <h2 class="portfolio-title">Growing Business</h2>
+                <p class="portfolio-text">Додаток</p>
           </li>
         </ul>
     </section>
