--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
       <header class="header">
         <div class="header-logo">
           <a href="index.html" class="header-studio"
-            ><span class="header-web">Web</span> Studio</a
+            ><span class="header-web">Web</span>Studio</a
           >
         </div>
 
         <div class="header-navigation">
           <nav>
             <ul class="header-list">
-              <li><a class="link" href="#">Студія</a></li>
+              <li><a class="link" href="index.html">Студія</a></li>
               <li><a class="link" href="portfolio.html">Портфоліо</a></li>
               <li><a class="link" href="#">Контакти</a></li>
             </ul>
@@ -55,12 +55,11 @@
         <!--heroy-->
         <section class="main-heroy">
           <div>
-            <h1>
+            <h1 class="heroy-title">
               Ефективні рішення для <br />
               вашого бізнесу
             </h1>
           </div>
-
           <button class="main-button" type="button">Замовити послугу</button>
         </section>
 
